openshift_exports/cluster_export/bbitai-dev-2026-03-20T15_31_03Z/bbitai-dev/Route_route.openshift.io_v1_bbitai-dev_felho-lab-git.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-ref: ""
    app.openshift.io/vcs-uri: https://github.com/BitaiBence/felho_lab.git
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: "true"
  labels:
    app: felho-lab-git
    app.kubernetes.io/component: felho-lab-git
    app.kubernetes.io/instance: felho-lab-git
    app.kubernetes.io/name: felho-lab-git
    app.kubernetes.io/part-of: felho-lab-git-app
  name: felho-lab-git
spec:
  port:
    targetPort: 3000-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: felho-lab-git
    weight: 100
  wildcardPolicy: None
